Fix: Add AfpPrivatResultat enum and update related classes for alderspensjon