@@ -45,7 +45,7 @@ public class PensjonAlderspensjonSoknadMappingStrategy implements MappingStrateg
         return sivilstandType == SKILT ||
                 sivilstandType == ENKE_ELLER_ENKEMANN ||
                 sivilstandType == SKILT_PARTNER ||
-                sivilstandType != GJENLEVENDE_PARTNER;
+                sivilstandType == GJENLEVENDE_PARTNER;
     }
 
     private static boolean isVarigAdskilt(PdlPerson.SivilstandType sivilstandType) {
@@ -111,24 +111,24 @@ public class PensjonAlderspensjonSoknadMappingStrategy implements MappingStrateg
                             personer.stream()
                                     .filter(personBolk -> personBolk.getIdent().equals(partner.get()))
                                     .forEach(partnerPerson -> {
-                                        request.getRelasjonListe().get(0).setFnr(partnerPerson.getIdent());
+                                        request.getRelasjonListe().getFirst().setFnr(partnerPerson.getIdent());
                                         partnerPerson.getPerson().getSivilstand().stream()
                                                 .min(new SivilstandSort())
                                                 .ifPresent(sivilstand -> {
-                                                    request.getRelasjonListe().get(0).setRelasjonType(getRelasjonType(sivilstand.getType()));
-                                                    request.getRelasjonListe().get(0).setRelasjonFraDato(sivilstand.getGyldigFraOgMed());
-                                                    request.getRelasjonListe().get(0).setHarVaertGift(isHarVaertGift(sivilstand.getType()));
-                                                    request.getRelasjonListe().get(0).setVarigAdskilt(isVarigAdskilt(sivilstand.getType()));
-                                                    request.getRelasjonListe().get(0).setSamlivsbruddDato(
+                                                    request.getRelasjonListe().getFirst().setRelasjonType(getRelasjonType(sivilstand.getType()));
+                                                    request.getRelasjonListe().getFirst().setRelasjonFraDato(sivilstand.getGyldigFraOgMed());
+                                                    request.getRelasjonListe().getFirst().setHarVaertGift(isHarVaertGift(sivilstand.getType()));
+                                                    request.getRelasjonListe().getFirst().setVarigAdskilt(isVarigAdskilt(sivilstand.getType()));
+                                                    request.getRelasjonListe().getFirst().setSamlivsbruddDato(
                                                             getSamlovsbruddDato(sivilstand.getType(), sivilstand.getGyldigFraOgMed()));
                                                 });
 
                                         partnerPerson.getPerson().getDoedsfall().stream()
                                                 .findFirst()
                                                 .map(PdlPerson.Doedsfall::getDoedsdato)
-                                                .ifPresent(doedsdato -> request.getRelasjonListe().get(0).setDodsdato(doedsdato));
+                                                .ifPresent(doedsdato -> request.getRelasjonListe().getFirst().setDodsdato(doedsdato));
 
-                                        request.getRelasjonListe().get(0).setHarFellesBarn(
+                                        request.getRelasjonListe().getFirst().setHarFellesBarn(
                                                 partnerPerson.getPerson().getForelderBarnRelasjon().stream()
                                                         .filter(PdlPerson.ForelderBarnRelasjon::isBarn)
                                                         .map(PdlPerson.ForelderBarnRelasjon::getRelatertPersonsIdent)
